# ComputationalGeometry

./: .gitignore  README.md
Basic/: CMakeLists.txt  Doxyfile
Basic/docs/html/: algorithms_8cpp.html  algorithms_8cpp__incl.dot  algorithms_8h.html  algorithms_8h.js  algorithms_8h__dep__incl.dot  algorithms_8h__incl.dot  algorithms_8h_source.html  annotated.html  annotated_dup.js  basic__data__structures_8cpp.html  basic__data__structures_8cpp__incl.dot  basic__data__structures_8h.html  basic__data__structures_8h.js  basic__data__structures_8h__dep__incl.dot  basic__data__structures_8h__incl.dot  basic__data__structures_8h_source.html  class_solid-members.html  class_solid.html  class_solid.js  class_solid__coll__graph.dot  class_solid_a224761421646ab874ba6d78f1c071328_cgraph.dot  class_solid_a2630dd5cb24b1383fc595b007f047ffd_icgraph.dot  class_solid_a613e6d8c3419d5b33830131352dd116e_icgraph.dot  class_solid_a92c3bc7a900e589437069c1eaeffc7a8_icgraph.dot  class_solid_ae8029f1e94182aeb724d827cb34dd8f8_icgraph.dot  classcg_1_1_active_edge-members.html  classcg_1_1_active_edge.html  classcg_1_1_active_edge.js  classcg_1_1_active_edge__coll__graph.dot  classcg_1_1_active_edge__inherit__graph.dot  classcg_1_1_active_edge_a188cea1d6057089c91834310692dc173_cgraph.dot  classcg_1_1_active_edge_a1d1b5a5434d9d6fc76f6d6d9a1eebf1c_cgraph.dot  classcg_1_1_active_edge_ab140e3f374e81c0d12536a7c55abe6fe_icgraph.dot  classcg_1_1_active_element-members.html  classcg_1_1_active_element.html  classcg_1_1_active_element.js  classcg_1_1_active_element__inherit__graph.dot  classcg_1_1_active_element_a1b74621c406c0930afbfd39940bf67bd_icgraph.dot  classcg_1_1_active_element_a7664c2a55de55a04b2b54822b3c2eaf0_icgraph.dot  classcg_1_1_active_element_ae6070c3a65dd49f8bfc56438a953aa44_icgraph.dot  (+631 more)
Basic/docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+83 more)
Basic/include/: algorithms.h  basic_data_structures.h  gadts.h  geometry.h  list.h  node.h  solid.h  stack.h  tree.h  utilFuncs.h
Basic/src/: CMakeLists.txt  algorithms.cpp  basic_data_structures.cpp  gadts.cpp  geometry.cpp  main.cpp  node.cpp  solid.cpp  utilFuncs.cpp
IntersectionsEigen/: CMakeLists.txt  OpenGLFunctions.cpp  OpenGLFunctions.h  main.cpp  primitives.cpp  primitives.h  shader.vs
IntersectionsEigen/build2/: ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
IntersectionsEigen/build2/src/: Intersections.vcxproj.filters  cmake_install.cmake
IntersectionsEigen/build2/testFiles/: cmake_install.cmake
IntersectionsEigen/include/: contour.h  primitives.h  solid.h
IntersectionsEigen/lib/: boost_atomic-vc143-mt-x64-1_85.lib  boost_chrono-vc143-mt-x64-1_85.lib  boost_container-vc143-mt-x64-1_85.lib  boost_context-vc143-mt-x64-1_85.lib  boost_coroutine-vc143-mt-x64-1_85.lib  boost_date_time-vc143-mt-x64-1_85.lib  boost_exception-vc143-mt-x64-1_85.lib  boost_random-vc143-mt-x64-1_85.lib  boost_system-vc143-mt-x64-1_85.lib  boost_thread-vc143-mt-x64-1_85.lib
IntersectionsEigen/src/: CMakeLists.txt  Contour.cpp  Solid.cpp  main.cpp  primitives.cpp
IntersectionsEigen/testFiles/: cube.stl  cube_edge_hole.stl  cube_half_hole.stl  cube_hole3.stl  cube_hollow.stl
autonomous/: CMakeLists.txt
autonomous/include/: adts.h
autonomous/src/: CMakeLists.txt  adts.cpp  main.cpp
(+9 files in other folders)
